# paper_trading-1

./: .env.example  .gitignore  .pre-commit-config.yaml  000983.csv  002833.csv  600028.csv  601857.csv  Dockerfile  Makefile  README.rst  dividend_utils-0.1.0-py3-none-any.whl  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/workflows/: lint.yml  main.yml  test.yml
app/: __init__.py  main.py  settings.toml
app/api/: __init__.py
app/api/dependencies/: authentication.py  database.py  state.py
app/api/routes/: authentication.py  orders.py  position.py  statement.py  users.py
app/core/: event.py  events.py  jwt.py  logging.py
app/db/: database.py  events.py  utils.py
app/db/cache/: base.py  entrust.py  position.py  user.py
app/db/repositories/: base.py  dividend_records.py  order.py  orders.py  position.py  statement.py  user.py  user_assets_record.py  users.py
app/errors/: db.py  events.py  http.py  service.py
app/exceptions/: db.py  events.py  http.py  service.py
app/models/: base.py  enums.py  mixin.py  rwmodel.py  types.py  typing.py
app/models/domain/: account.py  dividend_records.py  order.py  orders.py  position.py  rwmodel.py  statement.py  stocks.py  user_assets_records.py  users.py
app/models/schemas/: event_payload.py  http.py  jwt.py  log.py  orders.py  position.py  quotes.py  rwschema.py  statement.py  user_assets_records.py  users.py
app/schedulers/: __init__.py
app/schedulers/liquidation/: config.py  func.py  jobs.py
app/schedulers/market/: config.py  func.py  jobs.py
app/schedulers/user/: config.py  func.py  jobs.py
app/services/: events.py
app/services/engines/: account_engine.py  base.py  (+7 more)
app/utils/: json.py
conf/: zvt-config.json
docs/: api.rst  conf.py  contributing.rst  index.rst
docs/_static/: openapi.json
scripts/: cli.py  db_tools.py  profiling.py  start.sh
scripts/db_tools/: init_db.py  insert_data.py  sync_data.py
tests/: conftest.py
tests/json/: order.py  position.py  quotes.py
tests/mock/: mock_event.py  mock_load_entrust_orders.py  mock_quotes_api.py  tdx.py
tests/test_core/: test_jwt.py
tests/test_trade/: test_trading.py
(+35 files in other folders)
