[tool.poetry]
name = "paper_trading_v2"
version = "2.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
pymongo = "^3.11.0"
motor = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
