[tool.poetry]
name = "paper_trading_v2"
version = "2.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
pymongo = "^3.11.0"
motor = "^2.2.0"
dynaconf = "^3.1.0"
python-dotenv = "^0.14.0"
click = "^7.1.2"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
loguru = "^0.5.2"
pyjwt = "^1.7.1"
pytdx = "^1.72"
aioredis = "^1.3.1"
ujson = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.14.0"
httpx = "^0.14.3"
asgi-lifespan = "^1.0.1"
sphinx = "^3.2.1"
flake8 = "^3.8.3"
mypy = "^0.782"
coverage = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
