[tool.poetry]
name = "paper_trading_v2"
version = "2.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
pymongo = "^3.11.0"
motor = "^2.2.0"
dynaconf = "^3.1.0"
python-dotenv = "^0.14.0"
click = "^7.1.2"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
loguru = "^0.5.2"
pyjwt = "^1.7.1"
pytdx = "^1.72"
aioredis = "^1.3.1"
ujson = "^3.2.0"
gunicorn = "^20.0.4"
apscheduler = "^3.6.3"
pyodbc = "^4.0.30"
SQLAlchemy = "^1.3.22"
sqlalchemy-dremio = "^1.1.5"
hq2redis = {url = "https://cxan.jinchongzi.com/packages/hq2redis/hq2redis-0.3.5.tar.gz#md5=679e6665c40e25b72a14f670b7e2d259"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.14.0"
httpx = "^0.17.1"
asgi-lifespan = "^1.0.1"
sphinx = "^3.2.1"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest-cov = "^2.10.1"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.3.1"
sphinxcontrib-openapi = "^0.7.0"
flake8-print = "^4.0.0"
black = "^20.8b1"
viztracer = "^0.10.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
